# athlete-vision

./: README.md  conftest.py  pyproject.toml  requirements.txt
src/athlete_vision/: __init__.py  angle_analyzer.py  arm_analyzer.py  batch_processor.py  calibration.py  cli.py  constants.py  pipeline.py  pose_estimator.py  stride_analyzer.py  velocity_analyzer.py  video_downloader.py  web_app.py
tests/: test_angle_analyzer.py  test_arm_analyzer.py  test_batch_processor.py  test_calibration.py  test_cli.py  test_pipeline.py  test_pose_estimator.py  test_stride_analyzer.py  test_velocity_analyzer.py  test_video_downloader.py
