[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "athlete-vision"
version = "0.1.0"
description = "Pose estimation and athlete movement analysis from video"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
]

[project.scripts]
athlete-vision = "athlete_vision.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
